[package]
name = "gemon"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
bytes = "1.6"
serde = "1.0.198"
serde_derive = "1.0.200"
chrono = "0.4.38"
colored = "2.1.0"
